# SoC-Device-Inventions

./: .gitignore  README.md
aero-cast/firmware/: CMakeLists.txt  ble_bridge.c  ble_bridge.h  bme280.c  bme280.h  calibration.c  calibration.h  display.c  display.h  main.c  pio_sonic.h  pio_sonic.pio  sd_log.c  sd_log.h  sdkconfig.h  sonic.c  sonic.h  ui.c  ui.h  wind.c  wind.h
bone-echo/firmware/: CMakeLists.txt  Makefile  adc.c  adc.h  aux_adc.c  aux_adc.h  battery.c  battery.h  ble_bridge.c  ble_bridge.h  bua.c  bua.h  display.c  display.h  heel_caliper.c  heel_caliper.h  main.c  normative.c  normative.h  patient.c  patient.h  phantom.c  phantom.h  rx_chain.c  rx_chain.h  sd_log.c  sd_log.h  sos.c  sos.h  startup_stm32g474xx.s  stiffness.c  stiffness.h  stm32g474_conf.h  stm32g474_ret6.ld  tx_pulser.c  tx_pulser.h  ui.c  ui.h
dew-lapse/firmware/: CMakeLists.txt
flux-ring/firmware/: CMakeLists.txt  sdkconfig.defaults
glyph-press/firmware/: CMakeLists.txt  Makefile  battery.c  ble_uart.c  braille.c  buttons.c  emboss.c  encoder.c  feed.c  flash_table.c  linker.ld  main.c  main.h  paper_sensor.c  sd_card.c  sh1106.c  ws2812.c
gravi-dot/firmware/: CMakeLists.txt  adxl355.c  adxl355.h  cordic_math.c  cordic_math.h  ds18b20.c  ds18b20.h  gravity_corrections.c  gravity_corrections.h  main.c  main.h  ms5837.c  ms5837.h  neom9n.c  neom9n.h  scl3300.c  scl3300.h  sh1106.c  sh1106.h
halo-pin/firmware/: CMakeLists.txt  Makefile  adc.c  adc.h  airflow.c  airflow.h  ambient.c  ambient.h  battery.c  battery.h  ble_bridge.c  ble_bridge.h  calibration.c  calibration.h  concentration.c  concentration.h  display.c  display.h  laser.c  laser.h  main.c  pulse.c  pulse.h  sd_log.c  sd_log.h  startup_stm32g474xx.s  stm32g474_conf.h  stm32g474_ret6.ld  ui.c  ui.h
helio-tilt/firmware/: CMakeLists.txt  Makefile  battery.c  battery.h  ble_bridge.c  ble_bridge.h  detector.c  detector.h  display.c  display.h  filter_wheel.c  filter_wheel.h  gps.c  gps.h  imu.c  imu.h  langley.c  langley.h  main.c  radiometry.c  radiometry.h  sd_log.c  sd_log.h  solar_pos.c  solar_pos.h  startup_stm32g474xx.s  stepper.c  stepper.h  stm32g474_conf.h  ui.c  ui.h
ion-sprint/firmware/: CMakeLists.txt  Makefile  battery.c  battery.h  ble_bridge.c  ble_bridge.h  c4d.c  c4d.h  display.c  display.h  eph.c  eph.h  hv_supply.c  hv_supply.h  injection.c  injection.h  library.c  library.h  main.c  pump.c  pump.h  quant.c  quant.h  safety.c  safety.h  sd_log.c  sd_log.h  stm32g474_conf.h  stm32g474_ret6.ld  temperature.c  temperature.h  ui.c  ui.h  vial_lift.c  vial_lift.h
levia-forge/firmware/: CMakeLists.txt  ble_bridge.c  ble_bridge.h  display.c  display.h  input.c  input.h  main.c  phase_compute.c  phase_compute.h  phase_engine.c  phase_engine.h  pico_sdk_import.cmake  pio_phase.pio  safety.c  safety.h  sd_log.c  sd_log.h  sdkconfig.h  tof.c  tof.h  transducer_layout.c  transducer_layout.h
melody-sprite/firmware/: CMakeLists.txt  display.c  display.h  i2s_audio.c  i2s_audio.h  main.c  sequencer.c  sequencer.h  synth_engine.c  synth_engine.h  touch.c  touch.h
mussel-watch/firmware/: .gitignore  CMakeLists.txt  anomaly.c  anomaly.h  ble_config.c  ble_config.h  config.h  gape_sensor.c  gape_sensor.h  logger.c  logger.h  lora_uplink.c  lora_uplink.h  main.c  power.c  power.h  water_quality.c  water_quality.h
mycelium-node/firmware/: CMakeLists.txt  main.c  main.h  sdkconfig
opti-rot/firmware/: CMakeLists.txt  ble_bridge.c  ble_bridge.h  display.c  display.h  drude.c  drude.h  led.c  led.h  library.c  library.h  main.c  photodiode.c  photodiode.h  polarimeter.c  polarimeter.h  sd_log.c  sd_log.h  sdkconfig.h  stepper.c  stepper.h  temperature.c  temperature.h  ui.c  ui.h
phase-lock/firmware/: CMakeLists.txt  Makefile  adc.c  adc.h  aux_adc.c  aux_adc.h  battery.c  battery.h  ble_bridge.c  ble_bridge.h  demod.c  demod.h  display.c  display.h  i2c.c  i2c.h  main.c  pga.c  pga.h  power_amp.c  power_amp.h  ref_osc.c  ref_osc.h  sd_log.c  sd_log.h  spi.c  spi.h  startup_stm32g491xx.s  stm32g491_conf.h  stm32g491_ret6.ld  sweep.c  sweep.h  ui.c  ui.h
phase-scope/firmware/: CMakeLists.txt  adc.c  adc.h  ble_uart.c  ble_uart.h  calibration.c  calibration.h  display.c  display.h  fft.c  fft.h  main.c  main.h  power_quality.c  power_quality.h  sd_log.c  sd_log.h  sdkconfig  stm32g491ret6.ld
ping-caliper/firmware/: CMakeLists.txt  FreeRTOS.h  calibration.c  calibration.h  config.h  display.c  display.h  flaw.c  flaw.h  main.c  materials.c  materials.h  power.c  power.h  pulser.c  pulser.h  queue.h  receiver.c  receiver.h  sd_log.c  sd_log.h  semphr.h  startup.c  stm32g474.h  stm32g474ret6.ld  system_stm32g474.c  task.h  tgc.c  tgc.h  thickness.c  thickness.h  uart_proto.c  uart_proto.h
plume-sniffer/firmware/: CMakeLists.txt  battery.c  battery.h  ble.c  ble.h  bme280.c  bme280.h  column.c  column.h  display.c  display.h  identify.c  identify.h  library.c  library.h  main.c  peak.c  peak.h  preconc.c  preconc.h  pump.c  pump.h  sd_log.c  sd_log.h  sdkconfig.h  tcd.c  tcd.h  ui.c  ui.h
pulse-hound/firmware/: CMakeLists.txt  audio.c  audio.h  ble_stream.c  ble_stream.h  classifier.c  classifier.h  config.h  direction.c  direction.h  display.c  display.h  main.c  power.c  power.h  rf_detector.c  rf_detector.h  sd_logger.c  sd_logger.h  spectrum.c  spectrum.h
sap-watch/firmware/: CMakeLists.txt  STM32WL55JC_FLASH.ld  config.h  heat_ratio.c  heat_ratio.h  heater_safety.c  heater_safety.h  lorawan.c  lorawan.h  main.c  power.c  power.h  probe.c  probe.h  sensors.c  sensors.h  stm32wl55_startup.s  storage.c  storage.h  system_stm32wl55.c
sky-lens/firmware/: CMakeLists.txt  port_sim.c  port_sim.h
soil-whisper/firmware/: CMakeLists.txt  STM32WL55JCIX_FLASH.ld  main.c  main.h  sdkconfig  startup_stm32wl55xx.s  system_stm32wlxx.c
spectra-charm/firmware/: CMakeLists.txt  baseline.c  baseline.h  beerlambert.c  beerlambert.h  deconv.c  deconv.h  eeprom.c  eeprom.h  flash_store.c  flash_store.h  fuel_gauge.c  fuel_gauge.h  led_driver.c  led_driver.h  main.c  matching.c  matching.h  power.c  power.h  spectrometer.c  (+4 more)
(+1204 files in other folders)
